--- a/.project
+++ b/.project
@@ -26,7 +26,7 @@
 		<link>
 			<name>.link_to_grails_plugins</name>
 			<type>2</type>
-			<location>C:/Users/Ana/.grails/2.1.1/projects/SOF/plugins</location>
+			<locationURI>GRAILS_ROOT/2.1.1/projects/SOF/plugins</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
