--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,18 @@
 eclipse.preferences.version=1
+encoding//.link_to_grails_plugins/hibernate-2.1.1/grails-app/i18n=UTF-8
+encoding//.link_to_grails_plugins/hibernate-2.1.1/grails-app/i18n/messages.properties=UTF-8
+encoding//.link_to_grails_plugins/jquery-1.8.0/grails-app/i18n=UTF-8
+encoding//.link_to_grails_plugins/jquery-1.8.0/grails-app/i18n/messages.properties=UTF-8
+encoding//.link_to_grails_plugins/lang-selector-0.3/grails-app/i18n=UTF-8
+encoding//.link_to_grails_plugins/lang-selector-0.3/grails-app/i18n/messages.properties=UTF-8
+encoding//.link_to_grails_plugins/resources-1.1.6/grails-app/i18n=UTF-8
+encoding//.link_to_grails_plugins/resources-1.1.6/grails-app/i18n/messages.properties=UTF-8
+encoding//.link_to_grails_plugins/richui-0.8/grails-app/i18n=UTF-8
+encoding//.link_to_grails_plugins/richui-0.8/grails-app/i18n/messages.properties=UTF-8
+encoding//.link_to_grails_plugins/spring-security-core-1.2.7.3/grails-app/i18n=UTF-8
+encoding//.link_to_grails_plugins/spring-security-core-1.2.7.3/grails-app/i18n/spring-security-core.properties=UTF-8
+encoding//.link_to_grails_plugins/spring-security-core-1.2.7.3/grails-app/i18n/spring-security-core_de.properties=UTF-8
+encoding//.link_to_grails_plugins/spring-security-core-1.2.7.3/grails-app/i18n/spring-security-core_fr.properties=UTF-8
 encoding//grails-app/i18n=UTF-8
 encoding//grails-app/i18n/messages.properties=UTF-8
 encoding//grails-app/i18n/messages_cs_CZ.properties=UTF-8
